# pygrove-chain

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASES.md  genesis.toml
.github/workflows/: build.yml  release.yml
crates/consensus/: Cargo.toml
crates/consensus/src/: accordion.rs  asert.rs  emission.rs  lib.rs  pow.rs  reflection.rs  retarget.rs
crates/consensus/tests/: emission_long_form.rs  supply_cap.rs
crates/core/: Cargo.toml
crates/core/src/: address.rs  block.rs  hash.rs  lib.rs  tx.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  falcon.rs  lib.rs  slhdsa.rs
crates/finality/: Cargo.toml
crates/finality/src/: lib.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: main.rs  miner.rs  rpc_client.rs  wallet.rs
crates/gui/ui/: app.slint
crates/node/: Cargo.toml
crates/node/src/: chainstore.rs  cli.rs  explorer.html  genesis.rs  main.rs  mempool.rs  mining.rs  rpc.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: accounts.rs  apply.rs  lib.rs  rocks_store.rs  store.rs  subtrees.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs  wasmtime_backend.rs
docs/: mainnet-plan.md  runbook.md  sprint-plan.md  whitepaper.md
ops/: README.md  backup.sh  prometheus-alerts.yml  pygrove-node.service
sim/: README.md  accordion.py  adversarial.py  backtest.py  btc_history.py  pyproject.toml
web/: Dockerfile  site.janet
web-mobile/: Dockerfile  explorer.html  index.html  info.html  nginx.conf  str4w.conf
