[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/consensus",
    "crates/state",
    "crates/vm",
    "crates/node",
    "crates/gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/xjqcj357/pygrove-chain"
authors = ["PyGrove Chain contributors"]

[workspace.dependencies]
# Hashing
blake3 = "1.5"
sha3 = "0.10"
# Determinism-first serialization
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
# Fixed-point math (no floats in consensus)
fixed = "1.27"
# Error handling
thiserror = "1"
anyhow = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Time / misc
hex = "0.4"
rand_core = "0.6"
# Address encoding (BIP-0173 bech32m, with `pyg` HRP for PyGrove)
bech32 = "0.11"
# Bringup signature algorithm — replaced by Falcon-512 in Phase B via UpgradeCrypto
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "fast", "rand_core"] }
# Storage
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
# PQ signatures
# Falcon (FN-DSA) via RustCrypto — integer sampler for deterministic sigs
fn-dsa = "0.1"
# SLH-DSA (FIPS 205) for cold governance keys
slh-dsa = "0.1"
# RustCrypto's `Signer`/`Verifier` trait surface, consumed by slh-dsa
# 0.1, which requires a 2.3.0-pre.x release.
signature = "=2.3.0-pre.7"
# GUI — Slint (pure Rust, no Qt C++ deps)
slint = { version = "1.8", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-software"] }
slint-build = "1.8"
# Node RPC / config
toml = "0.8"
tiny_http = "0.12"
serde_json = "1"
# Contract VM (v0.5+ scope). Wasmtime over CPython per Palantir oversight —
# CMVP can't validate an interpreted-Python boundary; wasmtime gives us a
# clean cryptographic boundary. Optional via `pygrove-vm/wasm`.
wasmtime = { version = "27", default-features = false, features = ["cranelift", "runtime", "gc"] }
wat = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
strip = "symbols"
