[package]
name = "pygrove-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: PoW, retarget, accordion emission, on-chain reflection"

[dependencies]
pygrove-core = { path = "../core" }
blake3 = { workspace = true }
fixed = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
