[package]
name = "pygrove-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: block/tx types, canonical CBOR, domain-tagged hashing"

[dependencies]
blake3 = { workspace = true }
sha3 = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
