[package]
name = "pygrove-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: post-quantum signature dispatch (Falcon-512, SLH-DSA-128s)"

[dependencies]
pygrove-core = { path = "../core" }
thiserror = { workspace = true }
# Phase A bringup signature: Ed25519 (sig_algo = 3). Optional behind the
# `ed25519` feature so FIPS builds can drop ed25519-dalek and avoid its
# transitive signature ^2.0 dependency (which conflicts with slh-dsa's
# `signature ^2.3.0-pre.x` pin once slh-dsa is reactivated, roadmap #3).
ed25519-dalek = { workspace = true, optional = true }
# Used by ed25519_keypair / falcon::keypair (CryptoRng+RngCore bound).
# Need the `getrandom` feature for OsRng — the dispatch layer pulls
# entropy from it for Falcon's randomized signing path.
rand_core = { workspace = true, optional = true, features = ["getrandom"] }
# Phase B hot signature: Falcon-512 / FN-DSA (sig_algo = 1). Wired via fn-dsa
# 0.1 (Pornin's pure-Rust port). Optional behind `falcon`; FIPS builds drop
# Falcon (FIPS 206 draft, not yet allowlisted).
fn-dsa = { workspace = true, optional = true }

[features]
# Default: Ed25519 + Falcon-512 wired. Matches the v0.4 testnet-3 binary
# surface. SLH-DSA-128s (sig_algo=2) is reserved at the dispatch slot but
# returns NotWired — the upstream slh-dsa 0.1 crate pins a pre-release of
# `signature` that conflicts with ed25519-dalek.
default = ["ed25519", "falcon"]
# Ed25519 hot signature path (sig_algo=3). Pulls ed25519-dalek + rand_core.
ed25519 = ["dep:ed25519-dalek", "dep:rand_core"]
# Falcon-512 hot signature path (sig_algo=1). Pulls fn-dsa + rand_core.
falcon = ["dep:fn-dsa", "dep:rand_core"]
# FIPS-profile build. Excludes Ed25519 + Falcon from the dependency graph
# entirely. SLH-DSA wiring (which would land here) is currently blocked on
# upstream — see workspace Cargo.toml. The fips feature still flips
# allowed_sig() / allowed_hash() to FIPS_ALLOWLIST_*, gating UpgradeCrypto
# rotations at the consensus layer; algo dispatch returns NotWired for the
# allowlisted slots until slh-dsa lands.
# Build with: `cargo build -p pygrove-crypto --no-default-features --features fips`
fips = []