[package]
name = "pygrove-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: post-quantum signature dispatch (Falcon-512, SLH-DSA-128s)"

[dependencies]
pygrove-core = { path = "../core" }
thiserror = { workspace = true }
# Phase A bringup signature: Ed25519 (sig_algo = 3). Optional behind the
# `ed25519` feature so FIPS builds can drop ed25519-dalek and avoid its
# transitive signature ^2.0 dependency (which conflicts with slh-dsa's
# `signature ^2.3.0-pre.x` pin once slh-dsa is reactivated, roadmap #3).
ed25519-dalek = { workspace = true, optional = true }
# Used by ed25519_keypair / falcon::keypair (CryptoRng+RngCore bound).
# Need the `getrandom` feature for OsRng — the dispatch layer pulls
# entropy from it for Falcon's randomized signing path.
rand_core = { workspace = true, optional = true, features = ["getrandom"] }
# Phase B hot signature: Falcon-512 / FN-DSA (sig_algo = 1). Wired via fn-dsa
# 0.1 (Pornin's pure-Rust port). Optional behind `falcon`; FIPS builds drop
# Falcon (FIPS 206 draft, not yet allowlisted).
fn-dsa = { workspace = true, optional = true }
# SLH-DSA-128s (sig_algo = 2). FIPS 205 cold-governance signature, via
# integritychain's pure-Rust `fips205` (no C compiler, no signature-crate
# diamond). Optional behind the `slhdsa` feature.
fips205 = { workspace = true, optional = true }
# BLS12-381 (sig_algo = 5). Hot signature for the BFT finality
# committee — aggregation collapses N validator sigs into one verify.
blst = { workspace = true, optional = true }

[features]
# Default: Ed25519 + Falcon-512 + SLH-DSA + BLS wired.
# Matches the v0.4 testnet-3 binary surface plus all PQ signature
# algorithms now that the upstream `signature`-crate diamond is gone
# (fips205 has no `signature` dep).
default = ["ed25519", "falcon", "slhdsa", "bls"]
# Ed25519 hot signature path (sig_algo=3). Pulls ed25519-dalek + rand_core.
ed25519 = ["dep:ed25519-dalek", "dep:rand_core"]
# Falcon-512 hot signature path (sig_algo=1). Pulls fn-dsa + rand_core.
falcon = ["dep:fn-dsa", "dep:rand_core"]
# SLH-DSA-128s cold-governance path (sig_algo=2). Pulls fips205.
slhdsa = ["dep:fips205", "dep:rand_core"]
# BLS12-381 hot signature path (sig_algo=5). Pulls blst. Used by the
# BFT finality committee; aggregation collapses N sigs to one verify.
bls = ["dep:blst", "dep:rand_core"]
# FIPS-profile build. Excludes Ed25519 + Falcon from the dependency graph
# entirely. Activates SLH-DSA. The fips feature also flips
# allowed_sig() / allowed_hash() to FIPS_ALLOWLIST_*, gating UpgradeCrypto
# rotations at the consensus layer.
# Build with: `cargo build -p pygrove-crypto --no-default-features --features fips`
fips = ["slhdsa"]