[package]
name = "pygrove-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: wallet GUI shell (Slint)"

[[bin]]
name = "pygrove-gui"
path = "src/main.rs"

[dependencies]
pygrove-core = { path = "../core" }
slint = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
