[package]
name = "pygrove-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: wallet + miner GUI (Slint)"

[[bin]]
name = "pygrove-gui"
path = "src/main.rs"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-consensus = { path = "../consensus" }
pygrove-crypto = { path = "../crypto" }
slint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
ureq = { version = "2.10", default-features = false, features = ["json", "tls"] }
# Cross-platform clipboard (used by the wallet's Copy button).
arboard = { version = "3", default-features = false }

[build-dependencies]
slint-build = { workspace = true }
