[package]
name = "pygrove-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: node daemon and CLI"

[[bin]]
name = "pygrove-node"
path = "src/main.rs"

[[bin]]
name = "pygrove-cli"
path = "src/cli.rs"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-crypto = { path = "../crypto" }
pygrove-consensus = { path = "../consensus" }
pygrove-state = { path = "../state" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
toml = { workspace = true }
tiny_http = { workspace = true }
thiserror = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

[features]
default = []
# FIPS-profile build. Forwards to `pygrove-state/fips` and
# `pygrove-crypto/fips`. Enables `UpgradeCrypto` allowlist enforcement
# and refuses Ed25519 at the dispatch boundary. Prerequisite for
# FedRAMP / FIPS-140-3 module submission.
fips = ["pygrove-state/fips", "pygrove-crypto/fips"]
