[package]
name = "pygrove-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: node daemon and CLI"

[[bin]]
name = "pygrove-node"
path = "src/main.rs"

[[bin]]
name = "pygrove-cli"
path = "src/cli.rs"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-crypto = { path = "../crypto" }
pygrove-consensus = { path = "../consensus" }
pygrove-state = { path = "../state" }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
toml = { workspace = true }
tiny_http = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }

# Note: no `fips` feature here. FIPS deployments build pygrove-crypto with
# `cargo build -p pygrove-crypto --no-default-features --features fips`;
# downstream binaries pick up the FIPS dispatch surface at runtime via
# `pygrove_crypto::allowed_sig()`. See `crates/crypto/Cargo.toml`.
