[package]
name = "pygrove-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: authenticated state store with domain-tagged subtrees"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-consensus = { path = "../consensus" }
pygrove-crypto = { path = "../crypto" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
