[package]
name = "pygrove-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: authenticated state store with domain-tagged subtrees"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-consensus = { path = "../consensus" }
pygrove-crypto = { path = "../crypto" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }

# Note: there's no `fips` feature here. FIPS gating in `UpgradeCrypto`
# apply is a runtime call to `pygrove_crypto::allowed_sig()`, which already
# encodes the build profile of pygrove-crypto. State doesn't need its own
# feature flag to participate in FIPS enforcement.
#
# Forwarding `state/fips` → `crypto/fips` would compile if we also disabled
# crypto's default features (ed25519 + falcon, which conflict with slh-dsa's
# signature 2.3.0-pre.x dependency). That refactor isn't worth the
# complexity for a dispatch surface that's already correctly gated at
# the crypto layer.
