[package]
name = "pygrove-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyGrove Chain: authenticated state store with domain-tagged subtrees"

[dependencies]
pygrove-core = { path = "../core" }
pygrove-consensus = { path = "../consensus" }
pygrove-crypto = { path = "../crypto" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
# Used for governance-proof payload hashes
# (upgrade_crypto_gov_payload, register_attest_gov_payload, ...).
blake3 = { workspace = true }
# Optional persistent backend. Default off — MemState is the
# always-available baseline. Enable with --features rocksdb.
rocksdb = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }
tempfile = "3"

[features]
default = []
# Persistent RocksDB-backed StateStore (RocksState). Root commitment
# is byte-identical to MemState's, so migration between them does not
# change state_root. Pulls in `rocksdb` (with `snappy`) — adds a C++
# build dep, ~80MB of disk for the toolchain on first build.
rocksdb = ["dep:rocksdb", "dep:tracing"]

# Note: there's no `fips` feature here. FIPS gating in `UpgradeCrypto`
# apply is a runtime call to `pygrove_crypto::allowed_sig()`, which already
# encodes the build profile of pygrove-crypto. State doesn't need its own
# feature flag to participate in FIPS enforcement.
#
# Forwarding `state/fips` → `crypto/fips` would compile if we also disabled
# crypto's default features (ed25519 + falcon, which conflict with slh-dsa's
# signature 2.3.0-pre.x dependency). That refactor isn't worth the
# complexity for a dispatch surface that's already correctly gated at
# the crypto layer.
